Split up code, added Init function
- Users can easily init the code (only base, not working yet)

This code in this commit will not work.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Explosion Demo</title>
         <script src="https://code.jquery.com/jquery-2.x-git.min.js"></script>
+        <script src="explode.js"></script>
         <script src="main.js"></script>
         <link rel="stylesheet" href="main.css" />
     </head>
